python-service-1.yaml
apiVersion: v1
kind: Service
metadata:
  name: python-service-1
  namespace: kings
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: nlb 
spec:
  type: NodePort #ClusterIP  #LoadBalancer #ExternalName
  selector:
    app: python1
  ports: 
    - name: http
      port: 9001 # Service Port
      targetPort: 9001 # Container Port
      nodePort: 32001 # NodePort #30000-32767
