python-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: python-service
  namespace: kings
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: nlb 
spec:
  type: NodePort #ClusterIP  #LoadBalancer #ExternalName
  selector:
    app: python
  ports: 
    - name: http
      port: 9000 # Service Port
      targetPort: 9000 # Container Port
      nodePort: 32000 # NodePort #30000-32767
